<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/job_description_employee"
        android:layout_width="313dp"
        android:layout_height="240dp"
        android:background="@drawable/outline"
        android:clipToOutline="false"
        android:gravity="top|left"
        android:hint="Enter your text here..."
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:minLines="5"
        android:padding="16dp"
        android:textAlignment="gravity"
        app:layout_constraintBottom_toTopOf="@+id/job_payment_employee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/job_name_employee"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/job_name_employee"
        android:layout_width="313dp"
        android:layout_height="50dp"
        android:background="@drawable/outline"
        android:clipToOutline="false"
        android:gravity="top|left"
        android:hint="Enter job title"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:minLines="5"
        android:padding="16dp"
        android:textAlignment="gravity"
        app:layout_constraintBottom_toTopOf="@+id/job_description_employee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/job_payment_employee"
        android:layout_width="313dp"
        android:layout_height="50dp"
        android:hint="Payment per hour"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/jobImage_employee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/job_description_employee"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/jobImage_employee"
        android:layout_width="180dp"
        android:layout_height="88dp"
        android:background="#ECECEC"
        app:layout_constraintBottom_toTopOf="@+id/categories_spinner_employee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/job_payment_employee"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@android:drawable/ic_menu_upload" />

    <Button
        android:id="@+id/submit_job_employee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SUBMIT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categories_spinner_employee"
        app:layout_constraintVertical_bias="0.5" />

    <Spinner
        android:id="@+id/categories_spinner_employee"
        android:layout_width="313dp"
        android:layout_height="67dp"
        android:background="@drawable/spinner_outline"
        app:layout_constraintBottom_toTopOf="@+id/submit_job_employee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobImage_employee"
        app:layout_constraintVertical_bias="0.5"
        android:contentDescription="spinner widget for selecting categories"/>


</androidx.constraintlayout.widget.ConstraintLayout>
